# rawshift

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  justfile  lefthook.yml  release-plz.toml  rust-toolchain.toml
.github/workflows/: ci.yml
benches/: demosaic.rs  pipeline.rs
crates/rawshift/: Cargo.toml
crates/rawshift-core/: Cargo.toml  README.md
crates/rawshift-core/src/: codec.rs  color.rs  image.rs  lib.rs  metadata.rs
crates/rawshift-hwdec/: Cargo.toml  README.md
crates/rawshift-hwdec/src/: lib.rs
crates/rawshift-hwdec/src/vaapi/: av1.rs  bits.rs  hevc.rs  mod.rs  sys.rs
crates/rawshift-hwdec/tests/: vaapi_device.rs
crates/rawshift-image/: Cargo.toml  README.md  build.rs
crates/rawshift-image/examples/: avif_inspect.rs  encode_in_memory.rs
crates/rawshift-image/src/: error.rs  lib.rs  prelude.rs
crates/rawshift-image/src/codecs/: jpegli_shim.h  mod.rs
crates/rawshift-image/src/core/: mod.rs
crates/rawshift-image/src/formats/: avif.rs  dng_export.rs  encode.rs  export.rs  heic.rs  hw_planes.rs  mod.rs  registry.rs  standard.rs
crates/rawshift-image/src/metadata/: bridge.rs  exif.rs  icc.rs  isobmff.rs  mod.rs  xmp.rs
crates/rawshift-image/src/tiff/: parser.rs
crates/rawshift-image/src/transforms/: color.rs  mod.rs  tonemap.rs
crates/rawshift-image/tests/: avif_hw_decode.rs  export_format_tests.rs  heic_aux.rs  heic_hw_decode.rs  standard_decode_fixtures.rs
crates/rawshift-video/: Cargo.toml  README.md
crates/rawshift/examples/: decode_standard.rs  develop_image.rs  export_image.rs  heic_inspect.rs
crates/rawshift/src/: lib.rs
crates/rawshift/src/core/: mod.rs
crates/rawshift/tests/common/: mod.rs
docs/: V1_DESIGN.md
examples/: decode_arw.rs  develop_image.rs  export_image.rs  export_png.rs  generate_test_fixtures.rs  metadata_dump.rs
src/: error.rs  lib.rs  prelude.rs
src/codecs/: jxl.rs  ljpeg.rs  mod.rs
src/core/: image.rs  metadata.rs  mod.rs
src/data/: cameras.rs
src/formats/: arw.rs  dng.rs  dng_export.rs  export.rs  mod.rs  nef.rs  standard.rs
src/metadata/: exif.rs  icc.rs  mod.rs
src/processing/: color.rs  demosaic.rs  options.rs
src/processing/demosaic/: bayer.rs  bilinear.rs  mod.rs  xtrans.rs
src/tiff/: metadata_helper.rs  mod.rs  parser.rs  tags.rs  types.rs  writer.rs
src/transforms/: bad_pixel.rs  black_level.rs  ca_correction.rs  cfa.rs  color.rs  denoise.rs  mod.rs  opcodes.rs  tonemap.rs
tests/: dng_check.rs  export_format_tests.rs  heic_aux.rs  raw_decode_fixtures.rs  standard_decode_fixtures.rs  tiff_parser_tests.rs
tests/common/: mod.rs
