[package]
name = "rawshift"
version = "0.1.0"
edition = "2024"
description = "RAW image processing library focused on compatibility, correctness, and interoperability"
license = "MPL-2.0"
repository = "https://github.com/justin13888/rawshift"
homepage = "https://github.com/justin13888/rawshift"
documentation = "https://docs.rs/rawshift"
keywords = ["raw", "image", "dng", "arw", "photo"]
categories = ["multimedia::images", "encoding", "parser-implementations"]
readme = "README.md"
rust-version = "1.85"

[package.metadata.docs.rs]
# `heic-vendored` is intentionally excluded: it builds libheif from source and
# is an alternative linking mode to `heic`, not an additive feature.
features = ["full"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
binrw          = { version = "0.15",   optional = true }
libheif-rs     = { version = "2.7",    optional = true }
libwebp-sys    = { version = "0.14",   optional = true }
img-parts      = "0.4"
jpeg-encoder   = { version = "0.7",    optional = true }
jxl-oxide      = { version = "0.12.5", optional = true }
little_exif    = "0.6"
rayon          = "1.11.0"
image          = { version = "0.25", default-features = false, features = ["avif-native"], optional = true }
ravif          = { version = "0.13",   optional = true }
resvg          = { version = "0.44",   optional = true }
serde          = { version = "1.0",    optional = true, features = ["derive"] }
thiserror      = "2.0"
tracing        = "0.1"
zune-core      = "0.5"
zune-jpeg      = { version = "0.5",    optional = true }
zune-jpegxl    = { version = "0.5",    optional = true }
zune-png       = { version = "0.5",    optional = true }
zune-image     = "0.5"
gif            = { version = "0.13",   optional = true }
tiff           = { version = "0.11",   optional = true }

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
eyre = "0.6.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50", features = ["full"] }
tracing = { version = "0.1", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["jpeg", "png", "webp", "jxl-decode", "gif-decode", "tiff-decode"]

# Standard format decode/encode flags
jpeg-decode  = ["dep:zune-jpeg"]
jpeg-encode  = ["dep:jpeg-encoder"]
jpeg         = ["jpeg-decode", "jpeg-encode"]

png-decode   = ["dep:zune-png"]
png-encode   = ["dep:zune-png"]
png          = ["png-decode", "png-encode"]

webp-decode  = ["dep:libwebp-sys"]
webp-encode  = ["dep:libwebp-sys"]
webp         = ["webp-decode", "webp-encode"]

jxl-decode   = ["dep:jxl-oxide"]
jxl-encode   = ["jxl-decode", "dep:zune-jpegxl"]
jxl          = ["jxl-decode", "jxl-encode"]

gif-decode   = ["dep:gif"]
tiff-decode  = ["dep:tiff"]

avif-decode  = ["dep:image"]
avif-encode  = ["dep:ravif"]
avif         = ["avif-decode", "avif-encode"]

# HEIC/HEIF decode support via libheif. `heic` and `heic-vendored` are
# alternative linking modes — enable exactly one:
#   heic          — links the system libheif (resolved by pkg-config).
#   heic-vendored — builds libheif from source via cmake and links it
#                   statically; downstream consumers opt into this for
#                   self-contained builds (e.g. mobile cross-compilation).
#                   Needs a C/C++ toolchain + cmake.
heic-decode   = ["dep:libheif-rs"]
heic          = ["heic-decode"]
heic-vendored = ["heic-decode", "libheif-rs/embedded-libheif"]
svg          = ["dep:resvg"]
serde        = ["dep:serde"]

# Internal TIFF structure parser (used by TIFF-based RAW formats)
tiff-parser  = ["dep:binrw"]

# RAW format decode flags
arw-decode   = ["tiff-parser"]
cr2-decode   = ["tiff-parser"]
cr3-decode   = ["tiff-parser"]
crw-decode   = []
dng-decode   = ["tiff-parser", "jxl-decode"]
dng-encode   = ["tiff-parser"]
nef-decode   = ["tiff-parser"]
raf-decode   = []

# RAW format aliases (consistent with standard format naming: jpeg = jpeg-decode + jpeg-encode)
arw          = ["arw-decode"]
cr2          = ["cr2-decode"]
cr3          = ["cr3-decode"]
crw          = ["crw-decode"]
dng          = ["dng-decode", "dng-encode"]
nef          = ["nef-decode"]
raf          = ["raf-decode"]

# RAW formats with real test fixtures and working full-pipeline decode
raw-stabilizing = ["arw", "dng"]

# RAW formats missing test fixtures or pixel decode
raw-incomplete  = ["cr2", "cr3", "crw", "nef", "raf"]

# All RAW formats (backward-compatible alias)
experimental = ["raw-stabilizing", "raw-incomplete"]

# Everything
full = ["jpeg", "png", "webp", "jxl", "gif-decode", "tiff-decode",
        "avif", "heic", "svg", "serde", "experimental"]

[profile.release]
lto = "thin"
codegen-units = 1

[profile.fast-debug]
inherits = "release"
debug = 1
incremental = true

[profile.test]
opt-level = 3
debug = 1
incremental = true

[[bench]]
name = "decode"
harness = false

[[bench]]
name = "demosaic"
harness = false

[[bench]]
name = "pipeline"
harness = false

[[example]]
name = "develop_image"
required-features = ["experimental"]

[[example]]
name = "export_image"
required-features = ["experimental"]

[[example]]
name = "metadata_dump"
required-features = ["experimental"]

[[example]]
name = "heic_inspect"
required-features = ["heic"]

[[test]]
name = "raw_decode_fixtures"
required-features = ["experimental"]

[[test]]
name = "heic_aux"
required-features = ["heic"]

[[test]]
name = "tiff_parser_tests"
required-features = ["tiff-parser"]

[[test]]
name = "dng_check"
required-features = ["tiff-parser"]

[profile.bench]
lto = "thin"
codegen-units = 1

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(any_raw)'] }
